--- a/app/10account/views/account.html
+++ b/app/10account/views/account.html
@@ -32,13 +32,13 @@
 
   </div>
 
-  <div class="col-sm-8" >
+  <div class="col-sm-8" ng-show="officeid != ''">
     
     <!-- <pre class="code">{{ data | json }}</pre> -->
 
     <!-- <pre class="code">{{ show | json }}</pre> -->
 
-	<div class="panel panel-default">
+	<div class="panel panel-default" >
 		<div class="panel-body">
 			<div class="form-group form-inline">
 				<div class="col-sm-11">
