--- a/app/10account/views/createaccount.html
+++ b/app/10account/views/createaccount.html
@@ -13,7 +13,7 @@
                 <div class="col-xs-6 form-horizontal">
                     <span class="col-sm-4 control-label" 
                     style="padding-left: 0px; padding-right: 0px;" 
-                    >{{code}} + </span>
+                    >{{company.code}} + </span>
                     <div class="col-sm-8" style="padding-left: 0px;" >
                       <input type="text" 
                         class="form-control" placeholder="必填"
