--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -18,7 +18,7 @@
       <tr>
         <th class="col-md-2 text-center">景区名称</th>
         <th class="col-md-4 text-center">票名称</th>
-        <th class="col-md-1 text-center">票号</th>
+        <!--<th class="col-md-1 text-center">票号</th>-->
         <th class="col-md-1 text-center">未使用</th>
         <th class="col-md-1 text-center">未退票</th>
         <th class="col-md-1 text-center">可用</th>
@@ -29,7 +29,7 @@
       <tr ng-repeat="obj in tkttype.ticketarr">
         <td class="">{{obj.place_name}}</td>
         <td class="">{{obj.type_name}}</td>
-        <td class="text-center">{{obj.code}}</td>
+        <!--<td class="text-center">{{obj.code}}</td>-->
         <td class="text-center">
           <span ng-show="{{obj.used == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
           <span ng-show="{{obj.used == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
