--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -97,6 +97,15 @@
 						</div>
 					</div>
 
+					<!-- <div class="form-group">
+						<label class="col-xs-2 control-label">短信追加内容</label>
+						<div class="col-xs-10">
+							<input type="text" class="form-control" placeholder="请输入短信追加内容"
+							ng-model="saleobj.sms_template_id"
+							>
+						</div>
+					</div> -->
+
 					<div class="form-group">
 					    <label class="col-xs-2 control-label">短信发送类型</label>
 					    <div class="col-xs-10">
