--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -77,7 +77,7 @@
 			  	<input type="text" class="form-control" ng-model="order.note" >
 			</div>
 			<button type="button" class="btn btn-info btn-block mt20" 
-				ng-click="gogo()"
+				ng-click="gogo()" ng-disabled="!btnstate"
 			>确认购票</button>
 		</div>
 	</div>
