--- a/app/13order/views/orderticketlistcode.html
+++ b/app/13order/views/orderticketlistcode.html
@@ -2,11 +2,12 @@
 
 <div class="panel panel-danger" ng-repeat="tkttype in objs track by $index" >
   <!-- Default panel contents -->
-  <div class="panel-heading">{{tkttype.name}} 第 {{tkttype.sequence}} 个
+  <div class="panel-heading">{{tkttype.name}} {{tkttype.sequence}}
 
     <button type="button" 
       class="btn btn-xs btn-info pull-right"
-      ng-click="back(tkttype)"
+      ng-click="back()"
+      has-permission='docedit' 
     >
       退票
     </button>
@@ -16,8 +17,8 @@
     <thead>
       <tr>
         <th class="col-md-2 text-center">景区名称</th>
-        <th class="col-md-5 text-center">票名称</th>
-        <!--<th class="col-md-1 text-center">票号</th>-->
+        <th class="col-md-4 text-center">票名称</th>
+        <th class="col-md-1 text-center">票号</th>
         <th class="col-md-1 text-center">未使用</th>
         <th class="col-md-1 text-center">未退票</th>
         <th class="col-md-1 text-center">可用</th>
@@ -28,7 +29,7 @@
       <tr ng-repeat="obj in tkttype.ticketarr">
         <td class="">{{obj.place_name}}</td>
         <td class="">{{obj.type_name}}</td>
-        <!--<td class="text-center">{{obj.code}}</td>-->
+        <td class="text-center">{{obj.code}}</td>
         <td class="text-center">
           <span ng-show="{{obj.used == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
           <span ng-show="{{obj.used == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
@@ -36,10 +37,12 @@
         <td class="text-center">
           <span ng-show="{{obj.back == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
           <span ng-show="{{obj.back == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+
         </td>
         <td class="text-center">
           <span ng-show="{{obj.state == '1'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
           <span ng-show="{{obj.state == '0'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+
         </td>
         <td class="text-center">{{obj.otime}}</td>
 
