--- a/app/14statistics/views/statisticssale.html
+++ b/app/14statistics/views/statisticssale.html
@@ -32,8 +32,8 @@
     <thead>
       <tr>
         <th class="col-md-1 text-center">时间</th>
-        <th class="col-md-4 text-center">商品名称</th>
-        <th class="col-md-1 text-center">商品编号</th>
+        <th class="col-md-4 text-center">销售品名称</th>
+        <th class="col-md-1 text-center">销售品编号</th>
         <th class="col-md-1 text-center">购买数量</th>
         <th class="col-md-1 text-center">使用数量</th>
         <th class="col-md-1 text-center">退票数量</th>
@@ -44,8 +44,8 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.date}}</td>
-        <td class="">{{obj.type_name}}</td>
-        <td class="text-center">{{obj.goods_code}}</td>
+        <td class="">{{obj.name}}</td>
+        <td class="text-center">{{obj.sale_code}}</td>
         <td class="text-center">{{obj.buy}}</td>
         <td class="text-center">{{obj.used}}</td>
         <td class="text-center">{{obj.back}}</td>
