--- a/app/00dashboard/views/main.html
+++ b/app/00dashboard/views/main.html
@@ -7,19 +7,19 @@
 				        <tbody>
 				          <tr>
 				            <td class="col-xs-4 text-center">姓名</td>
-				            <td class="col-xs-8">dlq</td>
+				            <td class="col-xs-8">{{userobj.name}}</td>
 				          </tr>
 				          <tr>
 				            <td class="col-xs-4 text-center">电话</td>
-				            <td class="col-xs-8">dlq</td>
+				            <td class="col-xs-8">{{userobj.phone}}</td>
 				          </tr>
 				          <tr>
 				            <td class="col-xs-4 text-center">用户名</td>
-				            <td class="col-xs-8">dlq</td>
+				            <td class="col-xs-8">{{userobj.loginName}}</td>
 				          </tr>
 				          <tr>
 				            <td class="col-xs-4 text-center">所属机构</td>
-				            <td class="col-xs-8">dlq</td>
+				            <td class="col-xs-8">{{userobj.company_name}}</td>
 				          </tr>
 				        </tbody>
 				      </table>
@@ -29,9 +29,9 @@
 				  <div class="panel-heading"><b>平台服务</b></div>
 				  	
 					<ul class="service_list list-group ">
-					    <li class="list-group-item">在线客服:22875750</li>
-					    <li class="list-group-item">技术咨询:22875750</li>
-					    <li class="list-group-item">投诉建议:22875750</li>
+					    <li class="list-group-item">在线客服:4009900601</li>
+					    <li class="list-group-item">技术咨询:4009900601</li>
+					    <li class="list-group-item">投诉建议:4009900601</li>
 					</ul>
 					  
 				</div>
