--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -97,14 +97,14 @@
 						</div>
 					</div>
 
-					<!-- <div class="form-group">
+					<div class="form-group">
 						<label class="col-xs-2 control-label">短信追加内容</label>
 						<div class="col-xs-10">
-							<input type="text" class="form-control" placeholder="请输入短信追加内容"
-							ng-model="saleobj.sms_template_id"
-							>
+							<textarea class="form-control" rows="3"
+							ng-model="saleobj.sms_diy"
+							></textarea>
 						</div>
-					</div> -->
+					</div>
 
 					<div class="form-group">
 					    <label class="col-xs-2 control-label">短信发送类型</label>
