--- a/app/00dashboard/views/main.html
+++ b/app/00dashboard/views/main.html
@@ -1,58 +1,62 @@
-  	<div class="col-xs-12">
-    	<div class="row">
-    		<div class="col-md-4">
-    			<div class="panel panel-default">
-				  <div class="panel-heading"><b>基本信息</b></div>
-					<table class="table table-bordered">
-				        <tbody>
-				          <tr>
-				            <td class="col-xs-4 text-center">姓名</td>
-				            <td class="col-xs-8">{{userobj.name}}</td>
-				          </tr>
-				          <tr>
-				            <td class="col-xs-4 text-center">电话</td>
-				            <td class="col-xs-8">{{userobj.phone}}</td>
-				          </tr>
-				          <tr>
-				            <td class="col-xs-4 text-center">用户名</td>
-				            <td class="col-xs-8">{{userobj.loginName}}</td>
-				          </tr>
-				          <tr>
-				            <td class="col-xs-4 text-center">所属机构</td>
-				            <td class="col-xs-8">{{userobj.company_name}}</td>
-				          </tr>
-				        </tbody>
-				      </table>
-				</div>
-				
-    			<div class="panel panel-default">
-				  <div class="panel-heading"><b>平台服务</b></div>
-				  	
-					<ul class="service_list list-group ">
-					    <li class="list-group-item">在线客服:4009900601</li>
-					    <li class="list-group-item">技术咨询:4009900601</li>
-					    <li class="list-group-item">投诉建议:4009900601</li>
-					</ul>
-					  
-				</div>
-    		</div><!-- /col-md-4 -->
-    		<div class="col-md-8">
+<div class="col-xs-12">
+<div class="row">
+	<div class="col-md-4">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">
+		  		<b>基本信息</b>
+		  	</div>
+			<table class="table table-bordered">
+		        <tbody>
+		          <tr>
+		            <td class="col-xs-4 text-center">姓名</td>
+		            <td class="col-xs-8">{{userobj.name}}</td>
+		          </tr>
+		          <tr>
+		            <td class="col-xs-4 text-center">电话</td>
+		            <td class="col-xs-8">{{userobj.phone}}</td>
+		          </tr>
+		          <tr>
+		            <td class="col-xs-4 text-center">用户名</td>
+		            <td class="col-xs-8">{{userobj.loginName}}</td>
+		          </tr>
+		          <tr>
+		            <td class="col-xs-4 text-center">所属机构</td>
+		            <td class="col-xs-8">{{userobj.company_name}}</td>
+		          </tr>
+		        </tbody>
+		    </table>
+		</div>
+		
+		<div class="panel panel-default">
+		  	<div class="panel-heading">
+		  		<b>平台服务</b>
+		  	</div>
+		  	
+			<ul class="service_list list-group ">
+			    <li class="list-group-item">在线客服:4009900601</li>
+			    <li class="list-group-item">技术咨询:4009900601</li>
+			    <li class="list-group-item">投诉建议:4009900601</li>
+			</ul>
+			  
+		</div>
+	</div><!-- /col-md-4 -->
+	<div class="col-md-8">
 
-				<div class="panel panel-default">
-				  <div class="panel-heading"><strong>系统公告</strong></div>
-				  
-				  <ul class="list-group">
-					<li class="list-group-item"
-						ng-repeat='obj in objs'
-						ng-click='info(obj.id)'
-						style="cursor: pointer;">
-						{{obj.title}}
-						<span class="small" style="float:right; color: #999;">{{obj.sdate}}</span>
-					</li>
-					
-				  </ul>
-				</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<strong>系统公告</strong>
+			</div>
 
-    		</div><!-- /col-md-8 -->
-    	</div><!-- /row -->
-    </div><!-- /container-fluid -->
+			<ul class="list-group">
+				<li class="list-group-item"
+				ng-repeat='obj in objs'
+				ng-click='info(obj.id)'
+				style="cursor: pointer;">
+					{{obj.title}}
+					<span class="small" style="float:right; color: #999;">{{obj.sdate}}</span>
+				</li>
+			</ul>
+		</div>	
+	</div><!-- /col-md-8 -->
+</div><!-- /row -->
+</div><!-- /container-fluid -->
