--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -1,10 +1,10 @@
 <!-- Nested node template -->
 <script type="text/ng-template" id="nodes_renderer.html">
   <div ui-tree-handle class="tree-node tree-node-content"
-  	ng-click="getit(this)"
+  	ng-click="getit(this)" 
   >
     <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" 
-    data-nodrag ng-click="toggle(this)">
+    data-nodrag ng-click="toggle(this)" >
     <span class="glyphicon"
         ng-class="{
           'glyphicon-chevron-right': collapsed,
@@ -25,7 +25,7 @@
     <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
         class="glyphicon glyphicon-plus"></span></a> -->
   </div>
-  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
+  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}" >
     <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
     </li>
   </ol>
@@ -48,7 +48,8 @@
     <pre class="code">{{ show | json }}</pre> -->
 
     <div class="panel panel-success " >
-		<div class="panel-heading ">{{obj.name}} (需要提前 <span class="bhour"></span> 小时购票)</div>
+		<div class="panel-heading ">{{obj.name}} 
+    <!-- (需要提前 <span class="bhour"></span> 小时购票)--></div> 
 		<div class="panel-body addTicketForm">
 			<div class="input-group">
 				<span class="input-group-addon" >身份证号</span>
