--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -25,7 +25,7 @@
                   </div>
                 </div>
                 <div class="row mt10">
-                  <input type="text" class="form-control" ng-model="searchform.title" placeholder="订单标题" 
+                  <input type="text" class="form-control" ng-model="searchform.keyword" placeholder="订单标题" 
                   >
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
