--- a/app/style/deviceorder.css
+++ b/app/style/deviceorder.css
@@ -1,4 +1,4 @@
-.tab{width:100px;height: 100px; font-size: 20px;text-align: center;cursor: pointer;}
+/*.tab{width:100px;height: 100px; font-size: 20px;text-align: center;cursor: pointer;}
 .main{margin-top: 40px;}
 .return{width:100px; text-align: center;font-size: 20px;cursor: pointer;}
-a:link {color: #666666;}
+a:link {color: #666666;}*/
