--- a/app/style/app.css
+++ b/app/style/app.css
@@ -291,7 +291,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 
 
-
+/* 产品销售 */
 .num .jian, .num .jia, .num .kuang{width: 40px; height:40px; float:left; font-size:16px; text-align:center;  }
     
 .num .kuang{width:70px; border:none; border-top:1px solid #ccc; border-bottom:1px solid #ccc; }
@@ -301,3 +301,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .num .jian{border-top-left-radius: 4px;border-bottom-left-radius: 4px;border-top-right-radius: 0px;border-bottom-right-radius: 0px;}
 
 .num .jia{border-top-right-radius: 4px;border-bottom-right-radius: 4px;border-top-left-radius: 0px;border-bottom-left-radius: 0px;}
+
+
+
+
+
+/* 产品销售－补贴产品 */
+.unavailable, .unavailable:hover {cursor:not-allowed; color:#aaaaaa;}
+
+
+
