--- a/app/99common/views/app.html
+++ b/app/99common/views/app.html
@@ -4,7 +4,9 @@
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"
+	      ng-click="isCollapsed = !isCollapsed"
+	      >
 	        <span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
@@ -16,7 +18,8 @@
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+	    <div class="collapse navbar-collapse " 
+	    uib-collapse="isCollapsed" id="bs-example-navbar-collapse-1">
 
 	      <ul class="nav navbar-nav"  >
 	      	<li class="dropdown"
