--- a/app/14statistics/views/uselist.html
+++ b/app/14statistics/views/uselist.html
@@ -50,8 +50,8 @@
       <tr>
         <th class="col-md-2 text-center">操作时间</th>
         <th class="col-md-6 text-center">商品名称</th>
-        <th class="col-md-2 text-center">使用</th>
-        <th class="col-md-2 text-center">退票</th>
+        <th class="col-md-2 text-center">已使用</th>
+        <th class="col-md-2 text-center">已退票</th>
       </tr>
     </thead>
     <tbody>
