--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -3,28 +3,12 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                <div class="row">
+
+                <div class="row ">
+
                   <input type="text" class="form-control" ng-model="searchform.code" placeholder="订单编号">
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  
-
-                  <label>下单时间</label>&nbsp;&nbsp;
-                  <div class="input-group">
-                  <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
-                      <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
-                      </span>
-                  </div>
-                        &nbsp;&nbsp;到&nbsp;&nbsp;            
-                  <div class="input-group">
-                  <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
-                      <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
-                      </span>
-                  </div>
-                </div>
-                <div class="row mt10">
                   <input type="text" class="form-control" ng-model="searchform.keyword" placeholder="订单标题" 
                   >
                   &nbsp;&nbsp;&nbsp;&nbsp;
@@ -42,8 +26,42 @@
 
                   
 
-                  <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
                 </div>
+
+ 
+                <div class="row mt10">
+                  
+                  
+                  
+
+                  <label>下单时间</label>&nbsp;&nbsp;
+                  <div class="input-group">
+                  <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
+                      </span>
+                  </div>
+                        &nbsp;&nbsp;到&nbsp;&nbsp;            
+                  <div class="input-group">
+                  <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
+                      </span>
+                  </div>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+
+                  <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="机构编号">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+
+                  <input type="text" class="form-control" ng-model="searchform.login_name" placeholder="登录帐号">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+
+                  <button type="button" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
+
+                </div>
+
+
+                
                 
             </div>
         </div>
@@ -54,14 +72,12 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">订单名称</th>
+        <th class="col-md-3 text-center">订单名称</th>
         <th class="col-md-2 text-center">订单编号</th>
-        <!-- <th class="col-md-2 text-center">身份证</th>
-        <th class="col-md-1 text-center">姓名</th>
-        <th class="col-md-1 text-center">电话</th> -->
         <th class="col-md-2 text-center">游客信息</th>
-        <th class="col-md-2 text-center">数量</th>
-        <th class="col-md-2 text-center">购买时间</th>
+        <th class="col-md-1 text-center">数量</th>
+        <th class="col-md-1 text-center">购买时间</th>
+        <th class="col-md-1 text-center">出票状态</th>
         <th class="col-md-1 text-center">分销商</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
@@ -69,14 +85,12 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.title}}</td>
-        <td class="text-center">{{obj.code}}</td>
-        <!-- <td class="text-center">{{obj.cardno}}</td>
-        <td class="text-center">{{obj.name}}</td>
-        <td class="text-center">{{obj.mobile}}</td> -->
-        <td class="text-center">[{{obj.name}}][{{obj.mobile}}][{{obj.cardno}}]</td>
-        <td class="text-center">购买{{obj.num}}，退票{{obj.back}}，使用{{obj.used}}</td>
+        <td class="text-center"><br>{{obj.code}}</td>
+        <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
+        <td class="text-center">购买{{obj.num}}<br>退票{{obj.back}}<br>使用{{obj.used}}</td>
         <td class="text-center">{{obj.create_time}}</td>
-        <td class="text-center">{{obj.company_id_name}}<br>{{obj.create_by_name}}</td>
+        <td class="text-center">{{obj.ticket_state_name}}</td>
+        <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}<br>{{obj.operation_login_name}}</td>
         <th class="text-center">
           <a ng-click="ticketlist(obj.code)" class="btn btn-success btn-xs">票信息</a>
         </th>
