--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -3,6 +3,12 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
+
+              <input type="text" class="form-control" ng-model="searchform.place_code" placeholder="景区编号">
+              &nbsp;&nbsp;&nbsp;&nbsp;
+
+              <input type="text" class="form-control" ng-model="searchform.place_name" placeholder="景区名称">
+              &nbsp;&nbsp;&nbsp;&nbsp;
                 
               <label>使用时间</label>&nbsp;&nbsp;
               <div class="input-group">
@@ -32,7 +38,8 @@
     <thead>
       <tr>
         <th class="col-md-1 text-center">时间</th>
-        <th class="col-md-4 text-center">商品名称</th>
+        <th class="col-md-2 text-center">景区名称</th>
+        <th class="col-md-2 text-center">商品名称</th>
         <th class="col-md-1 text-center">商品编号</th>
         <th class="col-md-1 text-center">购买数量</th>
         <th class="col-md-1 text-center">使用数量</th>
@@ -44,6 +51,7 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.date}}</td>
+        <td class="text-center">{{obj.place_name}}</td>
         <td class="">{{obj.type_name}}</td>
         <td class="text-center">{{obj.goods_code}}</td>
         <td class="text-center">{{obj.buy}}</td>
