富文本编辑

--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -26,9 +26,10 @@
 					<div class="form-group">
 						<label class="col-xs-4 control-label">销售品简介</label>
 						<div class="col-xs-8">
-							<textarea class="form-control" rows="3"
+							<!-- <textarea class="form-control" rows="3"
 							ng-model="saleobj.detail"
-							></textarea>
+							></textarea> -->
+							<div text-angular ng-model="saleobj.detail"></div>
 						</div>
 					</div>
 
