--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -89,7 +89,7 @@
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
         <td class="text-center">购买{{obj.num}}<br>退票{{obj.back}}<br>使用{{obj.used}}</td>
         <td class="text-center">{{obj.create_time}}</td>
-        <td class="text-center">{{obj.ticket_state_name}}</td>
+        <td class="text-center"><br>{{obj.ticket_state_name}}</td>
         <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}<br>{{obj.operation_login_name}}</td>
         <th class="text-center">
           <a ng-click="ticketlist(obj.code)" class="btn btn-success btn-xs">票信息</a>
