--- a/app/14statistics/views/statisticscompanylist.html
+++ b/app/14statistics/views/statisticscompanylist.html
@@ -32,8 +32,10 @@
     <thead>
       <tr>
         <th class="col-md-1 text-center">时间</th>
-        <th class="col-md-4 text-center">销售品名称</th>
+        <th class="col-md-3 text-center">销售品名称</th>
         <th class="col-md-1 text-center">销售品编号</th>
+        <th class="col-md-1 text-center">分销商</th>
+
         <th class="col-md-1 text-center">购买数量</th>
         <th class="col-md-1 text-center">使用数量</th>
         <th class="col-md-1 text-center">退票数量</th>
@@ -46,6 +48,7 @@
         <td class="text-center">{{obj.date}}</td>
         <td class="">{{obj.name}}</td>
         <td class="text-center">{{obj.sale_code}}</td>
+        <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}</td>
         <td class="text-center">{{obj.buy}}</td>
         <td class="text-center">{{obj.used}}</td>
         <td class="text-center">{{obj.back}}</td>
