--- a/app/14statistics/views/statisticscompanylist.html
+++ b/app/14statistics/views/statisticscompanylist.html
@@ -3,6 +3,9 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
+
+              <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="分销商编号">
+              &nbsp;&nbsp;
                 
               <label>使用时间</label>&nbsp;&nbsp;
               <div class="input-group">
@@ -35,7 +38,6 @@
         <th class="col-md-3 text-center">销售品名称</th>
         <th class="col-md-1 text-center">销售品编号</th>
         <th class="col-md-1 text-center">分销商</th>
-
         <th class="col-md-1 text-center">购买数量</th>
         <th class="col-md-1 text-center">使用数量</th>
         <th class="col-md-1 text-center">退票数量</th>
