--- a/app/14statistics/views/statisticssale.html
+++ b/app/14statistics/views/statisticssale.html
@@ -3,6 +3,13 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
+
+              <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="分销商编号">
+              &nbsp;&nbsp;
+
+              <input type="text" class="form-control" ng-model="searchform.login_name" placeholder="销售账户">
+              &nbsp;&nbsp;
+
                 
               <label>使用时间</label>&nbsp;&nbsp;
               <div class="input-group">
