--- a/app/12sale/views/sellinggroup.html
+++ b/app/12sale/views/sellinggroup.html
@@ -27,13 +27,13 @@
 	    </div>
 	</div> <!--searchArea -->
 		
-	 <table class="table table-bordered text-center">
+	 <!--<table class="table table-bordered text-center">
 	    <thead>
 	      <tr>
 	        <th class="text-center">预订人数</th>
 			<th class="text-center">实际人数</th>
 			<th class="text-center col-md-1">出游时间</th>
-			<th class="text-center">预订团票</th>
+			<th class="text-center col-md-2">预订团票</th>
 			<th class="text-center">导游姓名</th>
 			<th class="text-center">导游电话</th>
 			<th class="text-center">导游车牌号</th>
@@ -52,6 +52,35 @@
 	        <td class="text-center">{{obj.guide_name}}</td>
 	        <td class="text-center">{{obj.guide_mobile}}</td>
 	        <td class="text-center">{{obj.vehicle_number}}</td>
+	        <td class="text-center">{{obj.remark}}</td>
+	        <td class="text-center">{{obj.update_time}}</td>
+	        <td class="text-center">{{obj.update_by}}</td>
+			<td class="text-center">
+				<a ng-click="edit(obj.code)" class="btn btn-success btn-sm">编辑</a>
+		        <a ng-click="del(obj.code)" class="btn btn-danger btn-sm">删除</a>
+		        <a ng-click="detail(obj.code)" class="btn btn-info btn-sm">详情</a>
+	        </td>
+	      </tr>
+	    </tbody>
+	  </table>-->
+
+	  <table class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-2 text-center">出游信息</th>
+	        <th class="text-center">预定团票</th>
+	        <th class="col-md-2 text-center">导游信息</th>
+	        <th class="col-md-2 text-center">备注</th>
+	        <th class="col-md-1 text-center">最后操作时间</th>
+	        <th class="col-md-1 text-center">最后操作人</th>
+	        <th class="col-md-2 text-center">操作</th>
+	      </tr>
+	    </thead>
+	    <tbody>
+	      <tr ng-repeat="obj in objs">
+	        <td class="text-center">[{{obj.book_count}}人][{{obj.actual_count}}人][{{obj.arrival_date}}]</td>
+	        <td class="">{{obj.order_name}}</td>
+	        <td class="text-center">[{{obj.guide_name}}][{{obj.guide_mobile}}][{{obj.vehicle_number}}]</td>
 	        <td class="text-center">{{obj.remark}}</td>
 	        <td class="text-center">{{obj.update_time}}</td>
 	        <td class="text-center">{{obj.update_by}}</td>
