--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -18,11 +18,11 @@
         成本价{{node.cost_price * 0.01 | currency : '¥'}} 
       </small>
       <small ng-show="node.guide_price != undefined">
-      	分销价{{node.guide_price * 0.01 | currency : '¥'}} 
+      	指导价{{node.guide_price * 0.01 | currency : '¥'}} 
       </small>
       <small ng-show="node.market_price != undefined">
-      	市场价{{node.market_price * 0.01 | currency : '¥'}}
-      </small><br>
+      	门市价{{node.market_price * 0.01 | currency : '¥'}}
+      </small>
       <small ng-show="node.govsubsidy_price != undefined && node.govsubsidy_price != -1">
         政府补贴{{node.govsubsidy_price * 0.01 | currency : '¥'}} 
       </small>
@@ -64,7 +64,7 @@
 
 
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-sm-5">
     <div ui-tree id="tree-root" data-nodrop-enabled="true" data-drag-enabled="false">
       <ol ui-tree-nodes ng-model="data">
         <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
@@ -73,7 +73,7 @@
 
   </div>
 
-  <div class="row col-sm-8" ng-show="show == true">
+  <div class="row col-sm-7" ng-show="show == true">
 
     <div class="panel panel-success " >
 		<div class="panel-heading ">{{obj.name}} 
